<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_text_size"
            android:padding="@dimen/main_padding"
            android:textStyle="bold"
            android:text="@string/overview_page_header_stats" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/zero_dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:text="@string/overview_page_connection_status" />

            <TextView
                android:id="@+id/connectionStatus"
                android:layout_width="@dimen/zero_dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:gravity="right"
                android:text="@string/unknown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/zero_dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:text="@string/overview_page_last_packet_id" />

            <TextView
                android:id="@+id/lastPacketId"
                android:layout_width="@dimen/zero_dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:gravity="right"
                android:text="@string/zero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/zero_dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:text="@string/overview_page_last_packet_time" />

            <TextView
                android:id="@+id/lastPacketTime"
                android:layout_width="@dimen/zero_dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:gravity="right"
                android:text="@string/not_applicable" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/zero_dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:text="@string/overview_page_crc_mismatches" />

            <TextView
                android:id="@+id/crcMismatches"
                android:layout_width="@dimen/zero_dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:gravity="right"
                android:text="@string/zero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/zero_dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:text="@string/overview_page_duplicate_packets" />

            <TextView
                android:id="@+id/duplicatePackets"
                android:layout_width="@dimen/zero_dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:gravity="right"
                android:text="@string/zero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/zero_dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:text="@string/overview_page_out_of_order_packets" />

            <TextView
                android:id="@+id/outOfOrderPackets"
                android:layout_width="@dimen/zero_dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:gravity="right"
                android:text="@string/zero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/zero_dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:text="@string/overview_page_dropped_packets" />

            <TextView
                android:id="@+id/droppedPackets"
                android:layout_width="@dimen/zero_dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_text_size"
                android:gravity="right"
                android:text="@string/zero" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_text_size"
            android:padding="@dimen/main_padding"
            android:textStyle="bold"
            android:text="@string/overview_page_header_accel_chart" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/accelChart"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/chart_height" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_text_size"
            android:padding="@dimen/main_padding"
            android:textStyle="bold"
            android:text="@string/overview_page_header_connection_chart" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/connectionChart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/chart_height" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_text_size"
            android:padding="@dimen/main_padding"
            android:textStyle="bold"
            android:text="@string/overview_page_header_battery_chart" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/batteryChart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/chart_height" />

    </LinearLayout>

</ScrollView>
